# Tarea-4_ASIES

./: README.md  genindex.html  intro.html  objects.inv  pyproject.toml  searchindex.js
_sources/: index.ipynb
tarea4/: _toc.yml  index.ipynb  intro.md
tarea4/EC_12abril_2mayo/: 01mayo21.txt  02mayo21.txt  12abril21.txt  13abril21.txt  14abril21.txt  15abril21.txt  16abril21.txt  17abril21.txt  18abril21.txt  19abril21.txt  20abril21.txt  21abril21.txt  22abril21.txt  23abril21.txt  24abril21.txt  25abril21.txt  26abril21.txt  27abril21.txt  28abril21.txt  29abril21.txt  30abril21.txt  trigram_graph.html
tarea4/_build/.doctrees/: environment.pickle  index.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
tarea4/_build/html/: .buildinfo  index.html  notebooks.html  search.html  searchindex.js
tarea4/_build/jupyter_execute/: index.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
